@@ -35,17 +35,17 @@ class Features {
         static void   enableDenormalsAreZeroMode();
         static String featuresAsString();
 
-        #if ARCH_X86
+        #if CONFIG_ASM && ARCH_X86
         inline static bool supportsMMX() { return bMMX; }
         inline static bool supportsSSE() { return bSSE; }
         inline static bool supportsSSE2() { return bSSE2; }
-        #endif // ARCH_X86
+        #endif // CONFIG_ASM && ARCH_X86
     private:
-        #if ARCH_X86
+        #if CONFIG_ASM && ARCH_X86
         static bool bMMX;
         static bool bSSE;
         static bool bSSE2;
-        #endif // ARCH_X86
+        #endif // CONFIG_ASM && ARCH_X86
 };
 
 #endif // __FEATURES_H__
