@@ -61,7 +61,7 @@ namespace LinuxSampler { namespace gig {
         KeyGroup = 0;
         SynthesisMode = 0; // set all mode bits to 0 first
         // select synthesis implementation (currently either pure C++ or MMX+SSE(1))
-        #if ARCH_X86
+        #if CONFIG_ASM && ARCH_X86
         SYNTHESIS_MODE_SET_IMPLEMENTATION(SynthesisMode, Features::supportsMMX() && Features::supportsSSE());
         #else
         SYNTHESIS_MODE_SET_IMPLEMENTATION(SynthesisMode, false);
